Added Lombok dependencies and improved string formatting